--- a/es_style.css
+++ b/es_style.css
@@ -1,19 +1,19 @@
 h1, footer {
     text-align: center;
     font-family: "Copperplate Gothic Light", cursive;
+    padding: 10px;
 }
 
 .wrapper {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-gap: 1em;
+    display: flex;
+    flex-flow: column wrap;
 }
 
 @media screen and (max-width: 767px) {
     .items {
+        flex: 1;
         display: grid;
         grid-template-columns: 1fr;
-        height: 600px;
         grid-gap: 1em;
     }
 }
@@ -22,7 +22,6 @@ h1, footer {
     .items {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        height: 600px;
         grid-gap: 1em;
     }
 }
@@ -31,47 +30,46 @@ h1, footer {
     .items {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
-        height: 600px;
         grid-gap: 1em;
     }
 }
 
 .item {
-    display: grid;
+    display: flex;
+    flex-flow: row wrap;
     border: 1px solid dimgrey;
     height: inherit;
     width: inherit;
-    grid-template-columns: 20% 60% 20%;
-    grid-template-rows: 100px 350px 100px 50px;
-    grid-template-areas:    "profilePic name insta"
-                            "pic pic pic"
-                            "desc desc desc"
-                            "heart likes likes";
+    align-items: center;
+    justify-content: center;
+    max-height: 600px;
 }
+
 .profilePic > img {
-    grid-area: profilePic;
+    flex-basis: 20%;
     max-width: 50px;
     max-height: 50px;
+    padding: 10px;
 }
 .name {
-    grid-area: name;
+    flex-basis: 60%;
 }
 .insta {
-    grid-area: insta;
+    flex-basis: 20%;
 }
 .pic {
-    grid-area: pic;
+    flex-basis: 100%;
 }
 .desc {
-    grid-area: desc;
-    overflow: hidden;
+    flex-basis: 100%;
 }
 .heart {
-    grid-area: heart;
+    flex-basis: 20%;
 }
 .likes {
-    grid-area: likes;
+    flex-basis: 80%;
 }
+
 button {
     border-radius: 8px;
     background-color: cornflowerblue;
@@ -88,5 +86,5 @@ button:hover {
 }
 img {
     max-width: 100%;
-    max-height: 100%;
+    max-height: 400px;
 }
